
[tool.poetry]
name = "streamlit"
version = "0.1.0"
description = "Trabalho final da disciplina de Python para Ciência de Dados do curso de Inteligência Artifical PUC-MG"
authors = ["Breno Lomasso <brenomlomasso@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
streamlit = "^1.2.0"
numpy = "^1.21.4"
pandas = "^1.3.5"
plotly = "^5.4.0"
scipy = "1.7.3"
wordcloud = "1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
